# xmem

./: .gitignore  Cargo.toml  README.md
crates/xmem-core/: Cargo.toml
crates/xmem-core/benches/: benchmark.rs
crates/xmem-core/src/: buffer.rs  cuda.rs  dtype.rs  error.rs  guard.rs  lib.rs  meta.rs  meta_region.rs  pool.rs  shm.rs  storage.rs
crates/xmem-core/tests/: integration_test.rs
crates/xmem-python/: Cargo.toml  README.md  pyproject.toml  xmem.pyi
crates/xmem-python/src/: lib.rs
crates/xmem-python/tests/: test_xmem.py
docs/: RELEASE_v0.1.0.md  benchmark-results.md  performance.md  release-checklist.md  troubleshooting.md
docs/plans/: 2026-01-28-xmem-design.md  2026-01-28-xmem-impl-overview.md  2026-01-28-xmem-impl-phase1.md  2026-01-28-xmem-impl-phase2.md  2026-01-28-xmem-impl-phase3.md  2026-01-28-xmem-impl-phase4.md  2026-01-28-xmem-impl-phase5.md  2026-01-28-xmem-overview.md  2026-01-30-gstreamer-style-pool.md
examples/: consumer.rs  producer.rs  simple.py
scripts/: publish-python.sh  publish.sh
