[package]
name = "xmem-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-process shared memory pool with CPU and CUDA support"

[features]
default = []
cuda = ["dep:cudarc"]
integration = ["dep:nix"]

[dependencies]
shared_memory = "0.12"
cudarc = { version = "0.12", optional = true }
nix = { version = "0.28", optional = true, features = ["fs", "process"] }
thiserror = "2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
